Fixed so the map only renders visible tiles

--- a/app/assets/stylesheets/webrts.scss
+++ b/app/assets/stylesheets/webrts.scss
@@ -313,22 +313,45 @@ $flashes: (
 
 //Container for the game map
 #game_map {
-  width: 500px;
-  height: 500px;
+  width: 505px;
+  height: 505px;
   overflow: hidden;
+  white-space: nowrap;
   border: solid #222222 1px;
   background-color: #666666;
   .map_row {
     width: 100%;
-    height: 20%;
-    overflow: hidden;
-
+    position: static;
+    height: 50px;
     .map_tile {
-      width: 64px;
-      height: 64px;
+      width: 50px;
+      height: 50px;
       float: left;
+      border: solid #222222 1px;
       background-color: #3d8b3d;
+      display: inline-block;
     }
+  }
+
+  #left_button {
+    width: 15px;
+    height: 505px;
+    background-color: #00B2F6;
+  }
+  #right_button {
+    width: 15px;
+    height: 505px;
+    background-color: #00B2F6;
+  }
+  #down_button {
+    width: 505px;
+    height: 15px;
+    background-color: #00B2F6;
+  }
+  #up_button {
+    width: 505px;
+    height: 15px;
+    background-color: #00B2F6;
   }
 
 }
